style(mds-calendar): fix gap for multilanguage worlds

--- a/projects/stencil/src/components/mds-calendar/mds-calendar.css
+++ b/projects/stencil/src/components/mds-calendar/mds-calendar.css
@@ -38,7 +38,7 @@
 
 nav {
   display: flex;
-  gap: theme('spacing.400');
+  gap: theme('spacing.200');
   justify-content: space-between;
 }
 
